<resources>
    <string name="app_name">inhaMap</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>

    <string name="bestway">기본(추천) : 최단경로로 안내</string>
    <string name="hitec">인하대학교 하이테크센터</string>
    <string name="hitec_1">문 1 : 하이테크 고층부 문</string>
    <string name="hitec_2">문 2 : 하이테크 저층부 문</string>
    <string name="hitec_3">문 3 : 하이테크 지하방향 문</string>

    <string name="explainComment">지도를 이동하며 건물을 클릭하거나 마이크를 눌러 사용합니다</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="str_start">Start</string>
    <string name="str_stop">Stop</string>
</resources>
