<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.StartingDoorActivity"
    tools:layout_editor_absoluteY="25dp">

    <android.support.v7.widget.Toolbar
        android:navigationIcon="@drawable/ic_arrow_back_white_24dp"
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/common_google_signin_btn_text_light_focused"
        android:elevation="4dp"
        android:theme="@style/ToolbarColored"
        app:popupTheme="?android:attr/editTextColor"
        app:titleTextColor="@android:color/white">
    </android.support.v7.widget.Toolbar>

    <com.github.chrisbanes.photoview.PhotoView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/white"
        android:text="@string/hitec"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/bestway"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:background="@android:color/white"/>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/hitec_1" />

        <ImageView
            android:id="@+id/imageView3_1"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/elevator" />

        <ImageView
            android:id="@+id/imageView3_2"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/wheelchair" />

        <ImageView
            android:id="@+id/imageView3_3"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/stair" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/hitec_2" />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/elevator" />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/wheelchair" />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/stair" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/hitec_3" />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/elevator" />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/wheelchair" />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/stair" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>